----

And will now instead have the format:
[source]
----
infinispan_statistics_approximate_entries{cache_manager="Foo",cache="Bar"}
infinispan_statistics_hits{cache_manager="Foo",cache="Bar"}
----

[NOTE]
====
For backwards compatibility, metrics are currently exported in the previous format. The setting `legacy` should be set to
`false` to export metrics in the new format.
====

=== Virtual threads enabled by default (JDK 21+)

This release now enables virtual thread pools by default.
This change can lead to improved application responsiveness and scalability under high concurrency.

However, we've identified a potential issue on systems with very low CPU counts (2 or fewer cores).
In these specific environments, virtual threads might, in rare cases, lead to system freezes due to thread pinning.

If you encounter this, you have a couple of straightforward solutions:

* **Disable virtual threads:** You can revert to the previous behavior by adding the following Java option: `-Dorg.infinispan.threads.virtual=false`
* **Increase scheduler parallelism:** Alternatively, you can try increasing the parallelism of the virtual thread scheduler using this Java option: `-Djdk.virtualThreadScheduler.parallelism=4`

We recommend monitoring your application's performance after the upgrade, especially if you are running on a system with a low CPU count.

=== FileStore supports not being segmented

When the file store changed to a new implementation in 13.0 it lost the ability to disable segmentation.
This has been added back in.
Note that disabling segmentation for the file store should only be done for smaller sized caches.

=== Removed legacy Hot Rod client

The legacy Hot Rod client (`org.infinispan:infinispan-hotrod-client-legacy`) has been removed. If, for some reason,
you still need to use it, please use one from previous versions which are still maintained.

=== Deprecation removals

Everything that was deprecated in 10.x, 11.0 has been removed.
